--- a/src/components/Discover/GenreTags/genreTags.scss
+++ b/src/components/Discover/GenreTags/genreTags.scss
@@ -2,4 +2,19 @@
 
 button {
   @include button-default;
+  width: 150px;
+  border-radius: 12px;
+  border: 1px solid gray;
+  height: 40px;
+  color: #e2e4e4;
+  background-color: #0f0e0e;
+  font-size: 15px;
+  &:active {
+    transition: 0.3s all;
+    transform: translateY(5px);
+    opacity: 0.8;
+  }
+  &:hover {
+    background: gray;
+  }
 }
