style(discover): change animation style

--- a/src/components/Discover/discover.scss
+++ b/src/components/Discover/discover.scss
@@ -8,6 +8,11 @@
   align-items: center;
 }
 
+.genre_container {
+  display: flex;
+  justify-content: center;
+}
+
 ul {
   columns: 2;
   list-style: none;
