feat(channels): starting to add functionality for requests to server
implemeneting api client server

--- a/src/components/Dashboard/dashboard.scss
+++ b/src/components/Dashboard/dashboard.scss
@@ -8,7 +8,7 @@
 }
 
 .header {
-  height: 22%;
+  height: 15%;
   border-bottom: 2px solid gray;
   position: relative;
   text-align: right;
@@ -17,14 +17,15 @@
 }
 
 .user_info {
-  height: 140px;
-  width: 150px;
+  height: 110px;
+  width: 110px;
 }
 
 .welcome_user {
   height: 40px;
   position: absolute;
   right: 0;
+  top: 0;
 }
 
 .dashboard_info {
@@ -35,6 +36,10 @@
   align-self: flex-end;
   position: absolute;
   bottom: 0;
+  color: lightgray;
+}
+.dashboard_info h3 {
+  color: gray;
 }
 
 .header h1 {
@@ -49,14 +54,16 @@
   display: flex;
   flex-direction: column;
   padding: 35px;
+  text-align: center;
 }
 
 .welcome_title {
   font-size: 30px;
+  text-align: center;
 }
 
 .button_emoji {
-  font-size: 90px;
+  font-size: 60px;
 }
 
 .ongaku_text {
