--- a/src/components/PostCard/Postcard.scss
+++ b/src/components/PostCard/Postcard.scss
@@ -13,8 +13,10 @@
 }
 
 .tile_button {
-  border: 2px solid red;
   padding-top: 0;
+  position: relative;
+  right: -10px;
+  top: -10px;
 }
 
 .message_title {
@@ -30,4 +32,7 @@
 
 .message_stats {
   display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
 }
