--- a/src/components/PostCard/Postcard.scss
+++ b/src/components/PostCard/Postcard.scss
@@ -19,9 +19,19 @@
   top: -10px;
 }
 
+.tile_info {
+  font-size: 13px;
+}
+
 .message_title {
   font-weight: 600;
   margin-bottom: 5px;
+}
+
+.message_channel {
+  font-weight: 700;
+  text-transform: uppercase;
+  text-align: center;
 }
 
 .message_body {
@@ -35,4 +45,37 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 10px;
+}
+
+.message_date {
+  color: #d3d3d3;
+  font-size: 1rem;
+  margin-top: 5px;
+  font-style: italic;
+}
+
+.comment_form {
+  margin: 1rem 0;
+}
+
+.comment_username {
+  font-style: italic;
+  font-weight: 600;
+}
+
+.comment_body {
+  font-family: 'Montserrat', sans-serif;
+  padding: 5px;
+  margin-bottom: 20px;
+  text-align: justify;
+  font-size: 12px;
+}
+
+.comment_header {
+  display: flex;
+  justify-content: space-between;
+  p {
+    color: #d3d3d3;
+    margin-bottom: 5px;
+  }
 }
