fix(channels): sidebar component bug fixed

--- a/src/components/Dashboard/dashboard.scss
+++ b/src/components/Dashboard/dashboard.scss
@@ -106,12 +106,13 @@
   padding: 10px;
   border-bottom: 0.5px solid gray;
   width: 100%;
+  text-align: left;
 }
 
 .search_input {
   background-color: $accent-one;
   border-radius: 12px;
   height: 35px;
-  width: 100%;
+  width: 261.63px;
   padding: 5%;
 }
