--- a/src/components/Dashboard/dashboard.scss
+++ b/src/components/Dashboard/dashboard.scss
@@ -16,6 +16,13 @@
   flex-direction: row;
 }
 
+.channel_title {
+  font-size: 1.5rem;
+  margin-top: 15px;
+  position: relative;
+  left: 35px;
+}
+
 .user_info {
   height: 110px;
   width: 110px;
