feat(oauth added): oauth authentication added
Oauth authentication added. Automatically checks if user is authenticated on page load using
cookies.

--- a/src/components/Home/Nav/Nav.scss
+++ b/src/components/Home/Nav/Nav.scss
@@ -12,7 +12,7 @@
   z-index: 3;
   opacity: 0;
   transform: translateY(-10vh);
-  button {
+  .nav_buttons {
     @include button-default;
     width: 30%;
   }
