--- a/src/components/Discover/GenreTags/genreTags.scss
+++ b/src/components/Discover/GenreTags/genreTags.scss
@@ -9,6 +9,7 @@
   color: #e2e4e4;
   background-color: #0f0e0e;
   font-size: 15px;
+  z-index: 3;
   &:active {
     transition: 0.3s all;
     transform: translateY(5px);
