feat: autocomplete on search channel

--- a/src/components/Dashboard/dashboard.scss
+++ b/src/components/Dashboard/dashboard.scss
@@ -101,6 +101,12 @@
   padding: 10%;
 }
 
+.drawer_search {
+  width: 80%;
+  display: flex;
+  justify-content: center;
+}
+
 .public_channel_list {
   list-style: none;
 }
