style(landig page): experimentation on a different style

--- a/src/components/Home/AboutUs/AboutUs.scss
+++ b/src/components/Home/AboutUs/AboutUs.scss
@@ -19,7 +19,7 @@
   .about_subtitle {
     font-size: 1.6rem;
     font-style: italic;
-    color: #a8a8a8;
+    color: $secondary-color;
     transform: translate(-50px, 0px);
     opacity: 0;
   }
