--- a/src/components/Home/Nav/Nav.scss
+++ b/src/components/Home/Nav/Nav.scss
@@ -24,6 +24,11 @@
   background: $primary-color;
 }
 
+.nav_logo {
+  height: 40px;
+  width: auto;
+}
+
 .nav_channels {
   background: $primary-color;
   color: $secondary-color;
