--- a/src/components/Home/Hero/Hero.scss
+++ b/src/components/Home/Hero/Hero.scss
@@ -1,4 +1,5 @@
 @import '../../../styles/variables.scss';
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;1,200&display=swap');
 
 .container_hero {
   @include flex-center;
@@ -18,7 +19,9 @@
     height: 64%;
     width: 100%;
     .logo_title {
-      font-size: 5rem;
+      font-family: 'Nunito', sans-serif;
+      font-weight: 300;
+      font-size: 4rem;
     }
   }
 
@@ -37,6 +40,8 @@
     justify-content: center;
     align-items: center;
     text-align: center;
+    font-style: italic;
+    font-weight: 100;
     width: 70%;
   }
 
@@ -88,6 +93,6 @@
 }
 
 .ongaku_image {
-  height: 500px;
+  height: 300px;
   width: auto;
 }
