feat(channel): add un/subscribe channel
also add error handl on create channel

--- a/src/components/Dashboard/CreateChannel/createChannel.scss
+++ b/src/components/Dashboard/CreateChannel/createChannel.scss
@@ -1,3 +1,14 @@
 .create_channel {
   height: 100vh;
 }
+
+.create_channel_form {
+  margin: 10px 0;
+  padding: 10px;
+  height: 15%;
+  font-size: 1rem;
+}
+
+.chakra-select__icon-wrapper {
+  height: 10px;
+}
