style(global): global styling in process

--- a/src/components/Dashboard/dashboard.scss
+++ b/src/components/Dashboard/dashboard.scss
@@ -9,7 +9,7 @@
 
 .header {
   height: 90px;
-  border-bottom: 2px solid gray;
+  border-bottom: 2px solid $secondary-color;
   position: fixed;
   width: 100%;
   text-align: right;
@@ -17,8 +17,9 @@
   flex-direction: row;
   z-index: 3;
   img {
-    width: 4.5rem;
-    height: 4.5rem;
+    height: 3.7rem;
+    margin-left: 0.4rem;
+    width: auto;
   }
 }
 
@@ -48,10 +49,10 @@
   align-self: flex-end;
   position: absolute;
   bottom: 0;
-  color: lightgray;
+  color: $secondary-color;
 }
 .dashboard_info h3 {
-  color: gray;
+  color: $secondary-color;
 }
 
 .header h1 {
