--- a/src/components/Home/Hero/Hero.scss
+++ b/src/components/Home/Hero/Hero.scss
@@ -1,11 +1,15 @@
 @import '../../../styles/variables.scss';
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;1,200&display=swap');
 
+#root {
+  background-color: $primary-color;
+}
 .container_hero {
   @include flex-center;
   justify-self: flex-start;
   flex-direction: column;
-  justify-content: space-evenly;
+  background-color: $primary-color;
+  // justify-content: space-evenly;
   opacity: 0;
   height: 85%;
   position: relative;
@@ -55,18 +59,18 @@
     button {
       @include button-default;
       color: $primary-color;
-      margin: 1vh 0 3vh 0;
+      margin: 4vh 0 0 0;
     }
-    .buttons_channels {
-      width: 40%;
-      font-size: 1.1rem;
-      background: lighten($secondary-color, 20%);
-    }
+    // .buttons_channels {
+    //   width: 40%;
+    //   font-size: 1.1rem;
+    //   background: lighten($secondary-color, 20%);
+    // }
   }
   .container_scrolldown {
     display: flex;
     position: absolute;
-    bottom: 0;
+    bottom: -10px;
     background: transparent;
     .svg-arrow {
       width: 10%;
@@ -93,6 +97,6 @@
 }
 
 .ongaku_image {
-  height: 300px;
+  height: 270px;
   width: auto;
 }
