--- a/src/components/Home/Nav/Nav.scss
+++ b/src/components/Home/Nav/Nav.scss
@@ -5,6 +5,7 @@
   height: 8vh;
   display: flex;
   justify-content: space-around;
+  background-color: $primary-color;
   align-items: center;
   box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.2);
   position: sticky;
