--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -8,9 +8,9 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Nunito', sans-serif;
-  font-weight: 200;
-  color: $secondary-color;
+  font-family: 'Space Grotesk', sans-serif;
+  // color: $secondary-color;
+  // background: $primary-color;
 }
 
 .container-full {
