--- a/src/components/Home/Nav/Nav.scss
+++ b/src/components/Home/Nav/Nav.scss
@@ -25,8 +25,14 @@
   background: $primary-color;
 }
 
+.nav_buttons {
+  margin-top: 0.4rem;
+  text-align: right;
+}
+
 .nav_logo {
   height: 40px;
+  margin-top: 0.4rem;
   width: auto;
 }
 
