--- a/src/components/Channel/Channel.scss
+++ b/src/components/Channel/Channel.scss
@@ -1,19 +1,34 @@
+@import '../../styles/variables.scss';
+
+.channel_title {
+  justify-self: center;
+}
 .channel_btn {
-  width: 33%;
-  padding: 7px;
+  width: 40%;
+  padding: 10px;
   margin: 1rem;
-  font-size: 13px;
+  font-size: 12px;
+  font-weight: 700;
   text-transform: uppercase;
 }
 
 .channel_btn_container {
-  position: fixed;
-  top: 90px;
   display: flex;
   justify-content: center;
+  align-items: center;
+  margin-top: 7rem;
+  width: 100%;
 }
 
 .empty_channel {
   margin-top: 12rem;
   margin-left: 30%;
+}
+
+.channel_welcome {
+  height: 40vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
