--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,12 +2,12 @@
 
 $primary-color: #ffdbac;
 $secondary-color: #101017;
-$accent-one: #e2e4e4;
-$accent-two: #065dc2;
-$accent-three: #113b98;
+$accent-one: #ffff;
+$accent-two: #cad315;
+$accent-three: rgba(26, 77, 128, 1);
 
 @mixin button-default {
-  border-radius: 5px;
+  // border-radius: 5px;
   padding: 2% 5%;
   text-align: center;
   vertical-align: center;
