--- a/src/components/Dashboard/dashboard.scss
+++ b/src/components/Dashboard/dashboard.scss
@@ -97,12 +97,15 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-  padding: 10%;
+  padding: 2%;
+  padding-left: 10%;
+  padding-bottom: 5%;
   font-weight: 600;
   font-size: 18px;
 }
 
 .drawer_public {
+  padding-top: 5%;
   padding: 10%;
 }
 
