--- a/src/components/Home/ChannelsInfo/ChannelsInfo.scss
+++ b/src/components/Home/ChannelsInfo/ChannelsInfo.scss
@@ -1,42 +1,73 @@
-.container_channels-info {
-  opacity: 0;
-  width: 100%;
-  height: 90%;
+@import '../../../styles/variables.scss';
+
+.channels-info_tree {
   display: flex;
+  width: 80%;
+  justify-content: space-around;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  .channels-info_chat-icon {
-    width: 30%;
-    transform: translate(50px, 0px);
+  height: 24vh;
+  transform: translateY(5vh);
+  background: $primary-color;
+  .tree_first {
     opacity: 0;
-    padding: 2vh 0;
-  }
-  .channels-info_content {
-    opacity: 0;
-    width: 80%;
-    height: 40%;
     display: flex;
-    flex-direction: column;
-    justify-content: space-around;
+    flex-direction: row;
+    justify-content: center;
     align-items: center;
-    .content_title {
-      font-size: 1.5rem;
-      font-weight: 500;
+    background: $primary-color;
+    .tree_leaf {
+      background: $secondary-color;
     }
-    .content_body {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      .body_first {
-        font-size: 1.1rem;
-        text-align: center;
-        padding-bottom: 4%;
-      }
-      .body_second {
-        font-size: 1.1rem;
-        text-align: center;
-      }
+  }
+  .tree_second {
+    opacity: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    background: $primary-color;
+    .tree_leaf {
+      background: $secondary-color;
     }
+  }
+  .tree_third {
+    opacity: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    background: $primary-color;
+    .tree_leaf {
+      background: $secondary-color;
+    }
+  }
+  .tree_leaf {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1rem;
+    width: 26vw;
+    height: 4vh;
+    max-width: 150px;
+    color: $primary-color;
+    @include button-default;
+    transform: rotate(0deg);
+    margin: 0px 3px;
+  }
+  .tree_third_one,
+  .tree_third_two {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    height: 40%;
+    background: $primary-color;
+    .tree_leaf {
+      width: 20vw;
+      height: 5vh;
+    }
+  }
+  .tree_leaf:hover {
+    //   transform: scale(1.1);
+    background: lighten($secondary-color, 15%);
   }
 }
