--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;1,200&display=swap');
 
-$primary-color: #ffdbac;
-$secondary-color: #101017;
-$accent-one: #ffff;
+$primary-color: #2d3848;
+$secondary-color: #ffff;
+$accent-one: #2d3848;
 $accent-two: #cad315;
 $accent-three: rgba(26, 77, 128, 1);
 
