--- a/src/components/Discover/discover.scss
+++ b/src/components/Discover/discover.scss
@@ -21,3 +21,15 @@
 .genre_list_item {
   padding: 10%;
 }
+
+.discover_header {
+  font-size: 25px;
+  text-align: center;
+  font-weight: bold;
+}
+
+.discover_title {
+  font-size: 19px;
+  font-style: italic;
+  color: black;
+}
