--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,7 +2,7 @@
 
 $primary-color: #ffdbac;
 $secondary-color: #101017;
-$accent-one: #ffff;
+$accent-one: white;
 $accent-two: #cad315;
 $accent-three: rgba(26, 77, 128, 1);
 
