--- a/src/components/ShowDetails/AdditionalDetails/AdditionalDetails.scss
+++ b/src/components/ShowDetails/AdditionalDetails/AdditionalDetails.scss
@@ -10,13 +10,18 @@
       box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
       flex: 1;
       margin: 3px;
-      span {
+      .details_span_title{
         color: rgb(80, 80, 80);
+      }
+      .link_hover {
+        color: $accent-three;
       }
     }
   }
   .details_notes,
   .details_profile {
+    display: flex;
+    flex-direction: column;
     h1 {
       font-size: 1rem;
     }
@@ -44,6 +49,23 @@
       }
       .track_duration {
         color: rgb(80, 80, 80);
+      }
+    }
+  }
+  .detail_video_container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-bottom: 10%;
+    height: 30vh;
+    .video_frame {
+      height: 20%;
+    }
+    .video_frame {
+      height: 80%;
+      iframe {
+        height: 100%;
       }
     }
   }
