--- a/src/components/Channel/Channel.scss
+++ b/src/components/Channel/Channel.scss
@@ -1,5 +1,16 @@
 @import '../../styles/variables.scss';
 
+.channel {
+  background-color: $secondary-color !important;
+  overflow-y: scroll;
+  padding: 0;
+  padding-bottom: 10px;
+}
+.postcard-container {
+  position: relative;
+  top: 130px;
+}
+
 .channel_title {
   justify-self: center;
 }
