--- a/src/components/PostCard/Postcard.scss
+++ b/src/components/PostCard/Postcard.scss
@@ -1,34 +1,64 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400&display=swap');
+@import '../../styles/variables.scss';
+
+.postcard {
+  width: 100%;
+  border-radius: 5px;
+  background-color: $accent-one;
+  margin-bottom: 0.7rem;
+  padding: 8px;
+}
+
+.postcard_title_wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  // svg {
+  //   height: 35px;
+  //   background-color: inherit;
+  //   color: $secondary-color;
+  // }
+}
 
 .message_tile {
   display: flex;
+  flex-direction: column;
   align-items: space-between;
-  margin-top: 1rem;
-  margin-bottom: 1rem;
   width: 100%;
 }
 
 .tile_image {
-  min-width: 30%;
-  max-width: 30%;
-  margin-right: 15px;
+  img {
+    width: 360px;
+    height: 100%;
+    width: 360px;
+    padding: 0 !important;
+  }
 }
 
-.tile_button {
-  padding-top: 0;
+#tile_button {
+  background-color: $accent-one;
+  color: $accent-three;
+  width: 40px;
+  border-radius: 50%;
+  height: 40px;
   position: relative;
-  right: -10px;
-  top: -10px;
+  left: 300px;
+  top: -330px;
+  // z-index: 2;
 }
 
 .tile_info {
-  width: 55%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   font-size: 13px;
 }
 
 .message_title {
   font-weight: 600;
   width: 70%;
+  font-size: 1.3rem;
   margin-bottom: 5px;
 }
 
@@ -46,7 +76,7 @@ img .vinyl_channel {
   font-family: 'Montserrat', sans-serif;
   text-align: justify;
   font-size: 14px;
-  margin-bottom: 25px;
+  margin-bottom: 10px;
 }
 
 .message_stats {
@@ -64,6 +94,10 @@ img .vinyl_channel {
   font-style: italic;
 }
 
+.comment_wrapper {
+  background-color: #f5f5f5;
+}
+
 .comment_form {
   margin: 1rem 0;
 }
@@ -76,7 +110,7 @@ img .vinyl_channel {
 .comment_body {
   font-family: 'Montserrat', sans-serif;
   padding: 5px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   text-align: justify;
   font-size: 12px;
 }
@@ -89,11 +123,4 @@ img .vinyl_channel {
     color: rgba(6, 93, 194, 0.6);
     margin-bottom: 5px;
   }
-}
-
-.postcard_header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-direction: row;
 }
