--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,8 +9,8 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Space Grotesk', sans-serif;
-  // color: $secondary-color;
-  // background: $primary-color;
+  color: $secondary-color;
+  background: $primary-color;
 }
 
 .container-full {
