--- a/src/components/Discover/GenreTags/genreTags.scss
+++ b/src/components/Discover/GenreTags/genreTags.scss
@@ -29,19 +29,19 @@
   }
 
   &.two {
-    background-color: $secondary-color;
-    color: white;
+    background-color: $accent-one;
+    color: $secondary-color;
     // font-weight: bold;
-    border: 1px solid $secondary-color;
+    border: 1px solid $accent-one;
     width: 130px;
     // margin-right: 7.5px;
   }
 }
 
 .selected_channel {
-  background-color: $secondary-color;
-  color: $primary-color;
+  background-color: $accent-one;
+  color: $secondary-color;
   box-shadow: none;
-  border: 1px solid $secondary-color;
+  border: 1px solid $accent-one;
   transform: scale(1.1);
 }
