--- a/src/components/Home/AboutUs/AboutUs.scss
+++ b/src/components/Home/AboutUs/AboutUs.scss
@@ -54,8 +54,8 @@
   }
   .buttons_join_bottom {
     @include button-default;
-    background: $secondary-color;
-    color: $primary-color;
+    background: $accent-one;
+    color: $secondary-color;
     transform: translate(0px, 50px);
     opacity: 0;
   }
