--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,7 +3,7 @@
 $primary-color: #2d3848;
 $secondary-color: #ffff;
 $accent-one: #607382;
-$accent-two: #c9c787;
+$accent-two: #ffff;
 $accent-three: #08111b;
 
 @mixin button-default {
