--- a/src/components/PostCard/Postcard.scss
+++ b/src/components/PostCard/Postcard.scss
@@ -1,14 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400&display=swap');
 @import '../../styles/variables.scss';
-
 .postcard {
   width: 100%;
   border-radius: 5px;
-  background-color: $accent-one;
+  background-color: $primary-color;
   margin-bottom: 0.7rem;
   padding: 8px;
 }
-
 .postcard_title_wrapper {
   display: flex;
   justify-content: space-between;
@@ -19,14 +17,13 @@
   //   color: $secondary-color;
   // }
 }
-
 .message_tile {
   display: flex;
   flex-direction: column;
   align-items: space-between;
   width: 100%;
+  background-color: $secondary-color;
 }
-
 .tile_image {
   img {
     width: 360px;
@@ -35,7 +32,6 @@
     padding: 0 !important;
   }
 }
-
 #tile_button {
   background-color: $accent-one;
   color: $accent-three;
@@ -47,38 +43,33 @@
   top: -330px;
   // z-index: 2;
 }
-
 .tile_info {
   display: flex;
   flex-direction: column;
   justify-content: center;
   font-size: 13px;
+  background-color: $secondary-color;
 }
-
 .message_title {
   font-weight: 600;
   width: 70%;
   font-size: 1.3rem;
   margin-bottom: 5px;
 }
-
 .message_channel {
   font-weight: 700;
   text-transform: uppercase;
   text-align: center;
 }
-
 img .vinyl_channel {
   height: 60%;
 }
-
 .message_body {
   font-family: 'Montserrat', sans-serif;
   text-align: justify;
   font-size: 14px;
   margin-bottom: 10px;
 }
-
 .message_stats {
   display: flex;
   justify-content: space-between;
@@ -86,27 +77,22 @@ img .vinyl_channel {
   margin-bottom: 10px;
   font-size: 12px;
 }
-
 .message_date {
   color: rgba(6, 93, 194, 0.6);
   font-size: 12px;
   margin-top: 5px;
   font-style: italic;
 }
-
 .comment_wrapper {
   background-color: #f5f5f5;
 }
-
 .comment_form {
   margin: 1rem 0;
 }
-
 .comment_username {
   font-style: italic;
   font-weight: 600;
 }
-
 .comment_body {
   font-family: 'Montserrat', sans-serif;
   padding: 5px;
@@ -114,7 +100,6 @@ img .vinyl_channel {
   text-align: justify;
   font-size: 12px;
 }
-
 .comment_header {
   display: flex;
   justify-content: space-between;
