--- a/src/components/ShowDetails/AdditionalDetails/AdditionalDetails.scss
+++ b/src/components/ShowDetails/AdditionalDetails/AdditionalDetails.scss
@@ -2,19 +2,22 @@
 .container_details {
   width: 80%;
   margin: auto;
+
   .detail_item {
     display: flex;
     justify-content: space-between;
+    font-family: 'Nunito', sans-serif;
     h1 {
-      font-size: 1.2rem;
-      box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
+      font-size: 1.3rem;
+      border-bottom: 0.2px solid $secondary-color;
+      padding: 0.5rem;
       flex: 1;
       margin: 3px;
-      .details_span_title{
-        color: rgb(80, 80, 80);
+      .details_span_title {
+        color: $secondary-color;
       }
       .link_hover {
-        color: $accent-three;
+        color: #c3cb52;
       }
     }
   }
@@ -53,4 +56,3 @@
     }
   }
 }
-
