--- a/src/components/ShowDetails/AdditionalDetails/ShowVideo/ShowVideo.scss
+++ b/src/components/ShowDetails/AdditionalDetails/ShowVideo/ShowVideo.scss
@@ -1,3 +1,4 @@
+@import '../../../../styles/variables.scss';
 .detail_video_container {
   display: flex;
   justify-content: center;
@@ -9,6 +10,7 @@
     max-height: 20%;
     h1 {
       font-size: 0.8rem;
+      padding: 0.5rem;
     }
   }
   .video_frame {
@@ -17,4 +19,23 @@
       height: 100%;
     }
   }
+}
+
+.video_buttons_container {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 1rem;
+}
+
+.video_buttons {
+  background-color: $accent-one;
+  padding: 0.5rem;
+  width: 150px;
+  text-transform: uppercase;
+  font-size: 12px;
+  font-family: 'Nunito', sans-serif;
+}
+
+.video_buttons + .video_buttons {
+  margin-left: 1rem;
 }
