--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,7 +4,7 @@ $primary-color: #2d3848;
 $secondary-color: #ffff;
 $accent-one: #607382;
 $accent-two: #ffff;
-$accent-three: #08111b;
+$accent-three: #c3cb52;
 
 @mixin button-default {
   // border-radius: 5px;
