--- a/src/components/CreatePost/Tile/tile.scss
+++ b/src/components/CreatePost/Tile/tile.scss
@@ -1,3 +1,9 @@
+@import '../../../styles/variables.scss';
 .activeCard {
-  border: 2px solid black;
+  background-color: $accent-one;
+  color: $secondary-color;
+}
+
+.text {
+  background-color: $accent-four;
 }
