--- a/src/components/CreatePost/FinalCreatePost/FinalCreatePost.scss
+++ b/src/components/CreatePost/FinalCreatePost/FinalCreatePost.scss
@@ -1,12 +1,14 @@
 @import '../../../styles/variables.scss';
 
 .FinalPostWrapper {
-  height: 100%;
+  height: 100vh;
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: $primary-color;
+  color: $secondary-color;
 }
 
 .FinalPost_Title {
