--- a/src/components/PostCard/Postcard.scss
+++ b/src/components/PostCard/Postcard.scss
@@ -1,75 +1,92 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+
 @import '../../styles/variables.scss';
+
 .postcard {
   width: 100%;
-  border-radius: 5px;
-  background-color: $primary-color;
-  margin-bottom: 0.7rem;
+  border-radius: 2px;
+  background-color: darken($secondary-color, 10%);
+  margin-bottom: 1rem;
   padding: 8px;
+  color: black;
 }
+
 .postcard_title_wrapper {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  // display: flex;
+  // justify-content: space-between;
+  // align-items: center;
   // svg {
   //   height: 35px;
   //   background-color: inherit;
   //   color: $secondary-color;
   // }
+  width: 200px;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
 }
+
 .message_tile {
   display: flex;
   flex-direction: column;
   align-items: space-between;
   width: 100%;
-  background-color: $secondary-color;
 }
+
 .tile_image {
   img {
-    width: 360px;
     height: 100%;
-    width: 360px;
+    width: 100px;
     padding: 0 !important;
   }
 }
+
 #tile_button {
   background-color: $accent-one;
-  color: $accent-three;
-  width: 40px;
+  color: $secondary-color;
+  width: 25px;
   border-radius: 50%;
   height: 40px;
   position: relative;
-  left: 300px;
-  top: -330px;
-  // z-index: 2;
+  left: 310px;
+  top: -95px;
+  z-index: 2;
 }
+
 .tile_info {
   display: flex;
   flex-direction: column;
   justify-content: center;
   font-size: 13px;
-  background-color: $secondary-color;
 }
+
 .message_title {
   font-weight: 600;
   width: 70%;
-  font-size: 1.3rem;
+  font-size: 1.5rem;
   margin-bottom: 5px;
+  margin-top: 25px;
+  width: 200px;
 }
+
 .message_channel {
   font-weight: 700;
   text-transform: uppercase;
   text-align: center;
 }
+
 img .vinyl_channel {
   height: 60%;
 }
+
 .message_body {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Roboto', sans-serif;
   text-align: justify;
-  font-size: 14px;
+  font-size: 16px;
   margin-bottom: 10px;
 }
+
 .message_stats {
   display: flex;
   justify-content: space-between;
@@ -77,35 +94,61 @@ img .vinyl_channel {
   margin-bottom: 10px;
   font-size: 12px;
 }
+
 .message_date {
-  color: rgba(6, 93, 194, 0.6);
+  color: $accent-one;
   font-size: 12px;
   margin-top: 5px;
   font-style: italic;
 }
-.comment_wrapper {
-  background-color: #f5f5f5;
-}
+
+// .comment_wrapper {
+//   background-color: #f5f5f5;
+// }
+
 .comment_form {
   margin: 1rem 0;
 }
+
 .comment_username {
   font-style: italic;
   font-weight: 600;
 }
+
 .comment_body {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Roboto', sans-serif;
   padding: 5px;
   margin-bottom: 10px;
   text-align: justify;
-  font-size: 12px;
+  font-size: 13px;
 }
+
 .comment_header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   p {
-    color: rgba(6, 93, 194, 0.6);
+    color: $accent-one;
     margin-bottom: 5px;
   }
+}
+
+.postcard_info {
+  display: flex;
+  align-items: flex-start;
+  height: 125px;
+}
+
+.postcard_rigth {
+  margin-left: 15px;
+}
+
+.comment_form_and_text {
+  background-color: #f5f5f5;
+  padding: 5px;
+  border-radius: 5px;
+}
+
+.MuiFilledInput-root {
+  padding-top: 0px !important;
 }
