--- a/src/components/Channel/Channel.scss
+++ b/src/components/Channel/Channel.scss
@@ -44,3 +44,11 @@
   margin-top: 180px;
   background: $primary-color;
 }
+
+.postcard:last-child {
+  margin-bottom: 0;
+}
+
+.container .channel {
+  background-color: $primary-color;
+}
