--- a/src/components/ShowDetails/AdditionalDetails/ShowVideo/ShowVideo.scss
+++ b/src/components/ShowDetails/AdditionalDetails/ShowVideo/ShowVideo.scss
@@ -4,13 +4,14 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin-bottom: 10%;
+  // margin-bottom: 10%;
   height: 30vh;
   .video_title {
     max-height: 20%;
     h1 {
       font-size: 0.8rem;
       padding: 0.5rem;
+      color: $secondary-color;
     }
   }
   .video_frame {
