--- a/src/components/Home/AboutUs/AboutUs.scss
+++ b/src/components/Home/AboutUs/AboutUs.scss
@@ -6,6 +6,7 @@
   height: 100%;
   align-items: center;
   justify-content: center;
+  transform: translateY(-10vh);
   .space_creator {
     height: 10vh;
   }
