--- a/src/components/Home/Nav/Nav.scss
+++ b/src/components/Home/Nav/Nav.scss
@@ -3,6 +3,7 @@
 .home_nav {
   width: 100vw;
   height: 8vh;
+  color: $secondary-color;
   display: flex;
   justify-content: space-around;
   background-color: $primary-color;
