--- a/src/components/Home/ChannelsInfo/ChannelsInfo.scss
+++ b/src/components/Home/ChannelsInfo/ChannelsInfo.scss
@@ -6,6 +6,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  transform: translateY(-10vh);
   .channels-info_chat-icon {
     width: 30%;
     transform: translate(50px, 0px);
