--- a/src/components/ShowDetails/AdditionalDetails/AdditionalDetails.scss
+++ b/src/components/ShowDetails/AdditionalDetails/AdditionalDetails.scss
@@ -38,8 +38,8 @@
   }
   .details_tracklist {
     .tracklist_header {
+      padding: 2%;
       font-size: 1.3rem;
-      box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
       display: flex;
       justify-content: space-between;
       background-color: $accent-four;
